<resources>
    # List
    <string name="app_name">My Application</string>
    <string name="gethtml">Get html</string>
    <string name="inputHint">input RMB</string>
    <string name="calbnt">calculate</string>

    # BMI
    <string name='title'>BMI 计算器</string>
    <string name='Heighttips'>请输入身高(米)</string>
    <string name="Weighttips">请输入体重(kg)</string>
    <string name="compute">计算</string>
    <string name="bmihint">您的BMI指数为</string>
    <string name="statehint">您的健康状态为</string>

    # Rate
    <string name="RMB" translatable="false">inputRMB</string>
    <string name="app_name2" translatable="false">Hello</string>
    <string name="title2" translatable="false">Hello</string>
    <string name="DOLLAR" translatable="false">dollar</string>
    <string name="EURO" translatable="false">EURO</string>
    <string name="WON" translatable="false">WON</string>

    # CourtCounter
    <string name="team_nameA">TeamA</string>
    <string name="team_nameB">TeamB</string>
    <string name="score1">0</string>
    <string name="score2">0</string>
    <string name="three_point">+3 POINTS</string>
    <string name="two_point">+2 POINTS</string>
    <string name="one_point">FREE THROW</string>
    <string name="reset">reset</string>

</resources>